--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,8 @@ spring:
   redis:
     port: 6379
     host: 127.0.0.1
+  mvc:
+    static-path-pattern: /**
+  resources:
+    static-locations: classpath:/static/,classpath:/META-INF/resources/
+
